// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gatsby-ssr generates <link> tags with \`crossorigin\` \`anonymous\` prop for self-hosted fonts 1`] = `
Array [
  <link
    as="font"
    crossOrigin="anonymous"
    href="/font.otf"
    rel="preload"
  />,
]
`;

exports[`gatsby-ssr generates <link> tags with \`crossorigin\` prop for external fonts accepts function \`crossOrigin\` in plugin config 1`] = `
Array [
  <link
    as="font"
    crossOrigin="anonymous"
    href="https://foo.bar/path/to/font.otf"
    rel="preload"
  />,
]
`;

exports[`gatsby-ssr generates <link> tags with \`crossorigin\` prop for external fonts accepts function \`crossOrigin\` in plugin config 2`] = `
Array [
  <link
    as="font"
    crossOrigin="use-credentials"
    href="https://foo.bar/path/to/another.woff"
    rel="preload"
  />,
]
`;

exports[`gatsby-ssr generates <link> tags with \`crossorigin\` prop for external fonts accepts string \`crossOrigin\` in plugin config 1`] = `
Array [
  <link
    as="font"
    crossOrigin="use-credentials"
    href="https://foo.bar/path/to/font.otf"
    rel="preload"
  />,
]
`;

exports[`gatsby-ssr generates a <link> tag for each asset 1`] = `
Array [
  <link
    as="font"
    crossOrigin="anonymous"
    href="/path/to/font.otf"
    rel="preload"
  />,
  <link
    as="font"
    crossOrigin="anonymous"
    href="https://foo.bar/path/to/another.ttf"
    rel="preload"
  />,
  <link
    as="font"
    crossOrigin="anonymous"
    href="https://foo.baz/path/to/another/font.woff"
    rel="preload"
  />,
]
`;
